# minio-python-mcp

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py  client.py
src/client/: mcp_anthropic_client.py  servers_config.json
src/minio_mcp_server/: __init__.py  server.py
src/minio_mcp_server/resources/: __init__.py  minio_resource.py
